version 2.1-beta4  XX-Dec-2012
. [NEW] FileUtils: Supports iPhone5 resources (-wide, -widehd)
		Option to search in subdirectories instead of using suffixes.
. [FIX] From cocos2d v1.1-rc0:
		Animate Action: Works as expected when display frame rate > than FPS (issue #1438)
. [FIX] CocosDenshion: Mute can be called before loading a file (issue #1434)
. [FIX] Transitions: Fixed possible memory leak in some tranitions
		Events are enabled/disabled at onEnter/onExit preventing possible bugs
. [FIX] Tests: Box2dTestBed: Using new API for touches/accelerometer
		JS tests are using a new repo: cocos2d-js-tests
. [FIX] Particles: "unscheduleUpdate" is no longer called at dealloc time
. [3RD] JS Bindings: Updated to v0.4. Chipmunk-JS + cocos2d-html5 is compatible with cocos2d/chipmunk + JSB


version 2.1-beta3  7-Nov-2012
. [NEW] Clipping Node: New node that let's you clip objects inside it. Check the demos!
. [NEW] Node API additions:
		Added: removeChild. Calls removeChild:cleanup: with cleanup=YES
		Added: removeChildByTag. Calls removeChildByTag:cleanup: with cleanup=YES
		Added: removeFromParent. Calls removeFromParentAndCleanup: with cleanup=YES
		Added: removeAllChildren. Calls removeAllChildrenWithCleanup: with cleanup=YES
. [NEW] EventDispatcher: Adds support for gestures in OSX
. [NEW] Layer: Added support of gestures in OSX
. [NEW] RenderTexture: Supports "auto rendering" its children to the texture. No need to call being/end
. [NEW] Scheduler: It is possible to schedule blocks too.
. [NEW] Tests: Added 'JS CocosDragon'. Shows the power of CocosBuilder + JS
. [FIX] Actions: TargetedAction can be copied. Calls super correctly
		Blink: "stop" restores original "visibility" state
		BezierTo: works with Repeat (issue #1008)
		CatmullRom: No "bouncing". Fixed interpolation (issue #1441)
. [FIX] Director: Fixed possible retain cycle with the delegate
		Fixed possible crash when purgeCacheData is called before the view is initialized (issue #1440)